--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,18 @@
     "@babel/preset-env": "^7.10.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "prettier": "^2.0.5",
     "sequelize": "^6.3.3"
   }
