--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.1.0",
+        "node-fetch": "^2.6.0",
         "nodemon": "^2.0.4",
         "prettier": "^2.0.5",
         "sequelize": "^6.3.3"
