--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
         "@babel/preset-env": "^7.10.4"
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "bcrypt": "^5.0.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
