--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "devDependencies": {
         "@babel/core": "^7.10.5",
         "@babel/node": "^7.10.5",
-        "@babel/preset-env": "^7.10.4"
+        "@babel/preset-env": "^7.10.4",
+        "nodemon": "^2.0.4",
+        "prettier": "^2.0.5"
     },
     "dependencies": {
         "axios": "^0.19.2",
@@ -23,9 +25,6 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.1.0",
-        "node-fetch": "^2.6.0",
-        "nodemon": "^2.0.4",
-        "prettier": "^2.0.5",
         "sequelize": "^6.3.3"
     }
 }
