--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.1.0",
+        "nodemailer": "^6.4.11",
         "sequelize": "^6.3.3"
     }
 }
