--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec babel-node src/index.js"
+        "start": "nodemon --exec babel-node src/index.js",
+        "start_with_dotenv": "nodemon --exec babel-node src/index.js -r dotenv/config dotenv_config_path=src/config/dev/.env"
     },
     "keywords": [],
     "author": "",
