--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.1.0",
         "nodemailer": "^6.4.11",
-        "sequelize": "^6.3.3"
+        "sequelize": "^6.3.3",
+        "winston": "^3.3.3"
     }
 }
